2007-04-27  Peter Bloomfield

	* libbalsa/information.c: (libbalsa_information_varg): replace
	'<' with "&lt;" entity in message string.

2007-04-26  Pawel Salek

	* src/balsa-message.c: do not crash on empty address groups.
	* libbalsa/imap/imap-commands.c: make GPGME and BINARY work together.

2007-04-25  Christophe Merlet  <redfox@redfoxcenter.org>

	* configure.in: added "oc" (Occitan) to ALL_LINGUAS.

2007-04-24  Pawel Salek

	* src/balsa-message.c: stop encryption processing if mailbox
	access fails.
	* libbalsa/mailbox_imap.c: attempt to handle fetch errors better.
	* libbalsa/imap/imap-commands.c: BINARY falls back to traditional
	method encountering UNKNOWN-CTE.

2007-04-23  Pawel Salek

	* libbalsa/information.c: build on 64-bit architecture.

2007-04-22  Albrecht Dreß

	* src/balsa-mime-widget-message.c: pass the reported sending code
	to the user.
	* src/{sendmsg-window,balsa-message}.c: ditto.
	* libbalsa/gmime-gpgme-context.c: Work around gpgme "pecularities"
	- fix bug 419903.
	* libbalsa/{rfc3156,send}.{c,h}: ditto.
	* libbalsa/mailbox_imap.c: do not get fooled by shorter binary
	attachments.(PS)

2007-04-21  Pawel Salek

	* libbalsa/mailbox_imap.c: plug memory leaks.
	* libbalsa/imap-server.c: enable binary extension.
	* libbalsa/imap/imap-handle.c: process BINARY output.
	* libbalsa/imap/imap-handle.h: add BINARY to the known capability list.
	* libbalsa/imap/imap-commands.c: issue BINARY commands.
	* libbalsa/information.c: fix memory leak in notify code.

2007-04-21  Peter Bloomfield

	* src/main-window.c: (balsa_window_new),
	(display_new_mail_notification), (cancel_new_mail_notification):
	pop up new-mail notification only if main-window is not active, and
	cancel it when main-window becomes active.

2007-04-20  Albrecht Dreß

	* libbalsa/address-book-ldap.c: support LDAP referrals.

2007-04-20  Peter Bloomfield

	* src/main-window.c: (display_new_mail_notification): use no
	more than one NotifyNotification for new mail.
