@@ -1,3 +1,8 @@
+2007-04-28  Peter Bloomfield
+
+	* libbalsa/information.c: (libbalsa_information_varg): simplify
+	conditional code.
+
 2007-04-27  Peter Bloomfield
 
 	* libbalsa/information.c: (libbalsa_information_varg): replace
